# mofapy2

./: .gitignore  README.md  description.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
mofapy2/: __init__.py  config.py  version.py
mofapy2/build_model/: build_model.py  init_model.py  save_model.py  train_model.py  utils.py
mofapy2/core/: BayesNet.py  gp_utils.py  gpu_utils.py  utils.py
mofapy2/core/distributions/: __init__.py  basic_distributions.py  bernoulli.py  bernoulli_gaussian.py  beta.py  binomial.py  gamma.py  multivariate_gaussian.py  poisson.py  univariate_gaussian.py
mofapy2/core/nodes/: Alpha_nodes.py  Kc_node.py  Kg_node.py  Sigma_node.py  Tau_nodes.py  Theta_nodes.py  U_nodes.py  W_nodes.py  Y_nodes.py  Z_nodes.py  Z_nodes_GP.py  Z_nodes_GP_mv.py  ZgU_node.py  basic_nodes.py  multiview_nodes.py  nongaussian_nodes.py  variational_nodes.py
mofapy2/notebooks/: getting_started_python.ipynb  run_mofa_cpu_vs_gpu.py  test_cupy.py
mofapy2/run/: entry_point.py
mofapy2/simulate/: simulate_mofa.py
tests/: conftest.py  test_anndata.py  test_entry_point.py
