[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mofapy2"
version = "0.7.0"
description = "Multi-omics factor analysis"
authors = ['Ricard Argelaguet', 'Damien Arnol', 'Danila Bredikhin', 'Britta Velten']
license = "LGPL-3.0"
readme = 'README.md'
repository = "https://github.com/gtca/mofapy2"
homepage = "https:/biofam.github.io/MOFA2/"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.2.0"
scipy = "~1"
scikit-learn = "~1"
h5py = "~3"
anndata = { version = "~0.8", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
anndata = "~0.8"
