[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mofapy2"
version = "0.7.3"
description = "Multi-omics factor analysis"
authors = ['Ricard Argelaguet', 'Damien Arnol', 'Danila Bredikhin', 'Britta Velten']
license = "LGPL-3.0"
readme = 'README.md'
repository = "https://github.com/bioFAM/mofapy2"
homepage = "https:/biofam.github.io/MOFA2/"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pandas = "*"
scipy = "~1"
scikit-learn = "~1"
h5py = "~3"
anndata = { version = "> 0.8", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
anndata = "~0.9"
